# yoda-translator

./: README.md  main.py  pyproject.toml  rules.py  text.py
