[tool.poetry]
name = "yoda-translator"
version = "0.1.0"
description = ""
authors = ["Haohang Xu <haohang.xu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.0.6"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
